# goodie-bag-bot

./: README.md  pyproject.toml  requirements.txt
configs/: template.yml
goodie_bot/: __init__.py  cli.py  ui.py
jobs/: sample_jobs.yml
template/: structure.txt
